--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.1",
   "private": true,
   "dependencies": {
-    "react": "16.2.0",
+    "react": "^16.4.0",
+    "react-bootstrap": "^1.5.0",
     "react-dom": "16.2.0",
     "react-scripts": "1.1.1"
   },
